--- a/Frontend/firebase.json
+++ b/Frontend/firebase.json
@@ -5,6 +5,10 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "predeploy":[
+      "npm install",
+      "npm run build"
     ]
   }
 }
