--- a/Frontend/firebase.json
+++ b/Frontend/firebase.json
@@ -6,9 +6,11 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "predeploy":[
-      "npm install",
-      "npm run build"
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
