--- a/Frontend/firebase.json
+++ b/Frontend/firebase.json
@@ -11,6 +11,10 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "predeploy":[
+      "npm install",
+      "npm run build"
     ]
   }
 }
